--- a/estilos.css
+++ b/estilos.css
@@ -5,3 +5,12 @@ font-size: larger;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
+
+h1{
+
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: blueviolet;
+    color: green;
+
+}
+
