--- a/estilos.css
+++ b/estilos.css
@@ -1,11 +1,15 @@
 
-
+.titulo{
+    text-align: left;
+    font-size: larger;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: green;
+    }
 
 h1{
 
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: blueviolet;
-    color: green;
+        
 
 }
 
