--- a/estilos.css
+++ b/estilos.css
@@ -3,12 +3,12 @@
     text-align: left;
     font-size: larger;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: green;
+    color: red;
     }
 
 h1{
 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
         
 
 }
