--- a/estilos.css
+++ b/estilos.css
@@ -3,13 +3,7 @@
     text-align: left;
     font-size: larger;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: red;
-    }
+    color: blue;
+   }
 
-h1{
-
-
-        
-
-}
 
