--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,8 @@
 
-.titulo{
-    text-align: left;
-    font-size: larger;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  
-}
+h1{
+  color: red; 
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
+
+}
 
